--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             padding: 0;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
+#tot{
+text-align: center;
+}
 
         .loader {
             border: 16px solid #f3f3f3;
